// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF - force line break ESS-2359 returns empty paragraph if it contains only force-line-breaks 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break ESS-2359 should detect hardbreaks in the beginning and end of paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "type": "hardBreak",
        },
        {
          "text": " foo ",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": " bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo ",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect invalid force line break 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is not a line break \\\\\\ not on second line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the correct force line break 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this-is-not-line-break\\\\but-this-one-is-line-break",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "second-line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the correct force line break on same line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this-is-line-break",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": " and-this-one-is-also-line-break",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "second-line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the force line break correctly 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a line break ",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": " second line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
